tests/baselines/reference/tsxElementResolution15.errors.txt
tests/cases/conformance/jsx/tsxElementResolution15.tsx(3,12): error TS2608: The global type 'JSX.ElementAttributesProperty' cannot have more than one property


==== tests/cases/conformance/jsx/tsxElementResolution15.tsx (1 errors) ====
    declare module JSX {
    	interface Element { }
    	interface ElementAttributesProperty { pr1: any; pr2: any; }
    	          ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2608: The global type 'JSX.ElementAttributesProperty' cannot have more than one property
    	interface IntrinsicElements { }
    }
    
    interface Obj1type {
    	new(n: string): {};
    }
    var Obj1: Obj1type;
    <Obj1 x={10} />; // Error
    